--- a/index.html
+++ b/index.html
@@ -1,12 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G3 Architects</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
-    
+    <!-- header starts -->
+    <header>
+        <!-- nav starts -->
+        <nav>
+            <h3>G3 Architects</h3>
+            <ul>
+                <li> <a href=""> Home</a></li>
+                <li> <a href=""> About</a></li>
+                <li> <a href=""> Contact Us</a></li>
+                <li> <a href=""> Login</a></li>
+            </ul>
+        </nav>
+        <!-- Brand New section starts -->
+        <section class="brand-new-section">
+            <div class="brand-new-div">
+                <!-- bran new header starts -->
+                <div class="brand-new-header">
+                    <h1 class="brand-new-header1">Brand New</h1>
+                    <h1 class="brand-new-header2">Group of Architects</h1>
+                </div>
+                <div class="brand-new-description">
+                    <p class="brand-new-description1">There are many variations of passages of Lorem Ipsum available,
+                        but the majority have suffered alteration</p>
+                    <p class="brand-new-description2"> in some form, by injected humour, or randomized words which don't
+                        look even</p>
+                </div>
+                <!-- button part starts -->
+                <button class="primary-btn">Explore More</button>
+                <div class="brand-new-banner">
+                    <img src="images/banner.png" alt="">
+                </div>
+            </div>
+        </section>
+    </header>
+    <!-- Main part starts -->
+    <main>
+        <!-- Features section starts -->
+        <section class="features-container">
+            <div class="features-album">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="features">
+                <div class="features-header">
+                    <h3 class="features-header1">Quick list <span>of Our</span> </h3>
+                    <h3 class="features-header2">Features</h3>
+                </div>
+                <div class="features-description">
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour, or randomized words which don't look even</p>
+                </div>
+                <button class="primary-btn">Explore More</button>
+            </div>
+        </section>
+    </main>
 </body>
+
 </html>
